# CMAKE-Sample-Projects

./: .gitignore  readme.txt
Project 01 (Hello CMAKE)/: CMakeLists.txt  main.cpp
Project 03 (Lib With Options)/: Message.cpp
Project 05 (Change Build Type)/: CMakeLists.txt
Project 06 (Controlling Compiler Flags)/: CMakeLists.txt  geometry_circle.cpp  geometry_circle.h  geometry_polygon.h  geometry_rhombus.h
Project 07 (Environment Detection)/: CMakeLists.txt
Project 08 (Cross Platform Dependencies)/: CMakeLists.txt
Project 09 (Compiler Dependent Code)/: CMakeLists.txt
Project 10 (Architecture Detection)/: CMakeLists.txt  main.cpp
Project 11 (Host CPU Instruction Set)/: CMakeLists.txt  config.h.in  main.cpp
Project 12 (Eigen and Vectorization)/: CMakeLists.txt  main.cpp
Project 13 (Detecting Python Interpreter)/: CMakeLists.txt
Project 14 (Python Embedding)/: CMakeLists.txt
Project 15 (OpenMP Detection)/: CMakeLists.txt  main.cpp
Project 16 (MPI Detection)/: CMakeLists.txt  main.cpp  readme.txt
Project 17 (Simple Testing)/: CMakeLists.txt  readme.txt  test.cpp  test.py  test.sh
Project 18 (Catch2 Testing)/: CMakeLists.txt
Project 19 (Google Test)/: CMakeLists.txt  main.cpp  sum_ints.cpp  sum_ints.h  test.cpp
Project 2 (Static Lib creation)/: CMakeLists.txt  Message.h
Project 20 (Dynamic Analysis)/: CMakeLists.txt  leaky_impl.cpp  leaky_impl.h  test.cpp
Project 21 (Expected Failures)/: CMakeLists.txt  test.py
Project 22 (Timeouts)/: CMakeLists.txt  test.py  test2.py
Project 23 (Parallel Testing)/: CMakeLists.txt
Project 23 (Parallel Testing)/test/: g.py  h.py  i.py  j.py
Project 24 (Subset of Tests)/: CMakeLists.txt
Project 24 (Subset of Tests)/test/: feature-c.py
Project 25 (Test FIxtures)/: CMakeLists.txt
Project 26 (Platform Independent File Ops)/: CMakeLists.txt
Project 27 (Configure Time Commands)/: CMakeLists.txt  main.c
Project 28 (Probing Compilation and Linking)/: CMakeLists.txt  task.cpp
Project 29 (Probing Compiler Flags)/: CMakeLists.txt  asan-example.cpp
Project 3 (Lib with Options)/: CMakeLists.txt  main.cpp
Project 30 (Probing Execution)/: CMakeLists.txt  use-uuid.cpp
Project 31 (Generating Sources Config Time)/: CMakeLists.txt  print_info.c.in
Project 32 (Generating Sources with Python)/: CMakeLists.txt  configurator.py  example.f90
Project 33 (Generating Sources Build Time)/: CMakeLists.txt  generate.py  main.cpp
Project 34 (Project Version)/: CMakeLists.txt  main.c  version.h.in
Project 35 (Git Hash)/: CMakeLists.txt  main.cpp  version.h.in
Project 36 (Code Reuse and Macro)/: CMakeLists.txt
Project 36 (Code Reuse and Macro)/src/: CMakeLists.txt
Project 36 (Code Reuse and Macro)/tests/: CMakeLists.txt  test.cpp
Project 37 (Splitting Sources into Modules)/: CMakeLists.txt
Project 37 (Splitting Sources into Modules)/cmake/: colors.cmake  set_compiler_flag.cmake
Project 38 (Limiting Scope with Subdir)/: CMakeLists.txt
Project 38 (Limiting Scope with Subdir)/src/: CMakeLists.txt  main.cpp
Project 38 (Limiting Scope with Subdir)/src/evolution/: CMakeLists.txt  evolution.cpp  evolution.h
Project 38 (Limiting Scope with Subdir)/src/initial/: CMakeLists.txt  initial.cpp  initial.h
Project 38 (Limiting Scope with Subdir)/src/io/: CMakeLists.txt  io.cpp  io.h
Project 38 (Limiting Scope with Subdir)/src/parser/: CMakeLists.txt  parser.cpp  parser.h
Project 38 (Limiting Scope with Subdir)/tests/: CMakeLists.txt  test.cpp
Project 39 (Superbuild Pattern)/: CMakeLists.txt
Project 39 (Superbuild Pattern)/src/: CMakeLists.txt  hello-world.cpp
Project 4 (Compiler Detection)/: CMakeLists.txt
Project 40 (Building C++ Py Cython)/: CMakeLists.txt  account.h  account.pyx  test.py
Project 41 (Building C++ Py Pybind11)/: CMakeLists.txt
Project 41 (Building C++ Py Pybind11)/account/: CMakeLists.txt  account.cpp  account.h  test.py
Project 42 (Installing Your Project)/: CmakeLists.txt
Project 42 (Installing Your Project)/src/: CMakeLists.txt
Project 42 (Installing Your Project)/tests/: CMakeLists.txt
Project 5 (Change Build Type)/: CMakeLists.txt
Project 6 (Controlling Compiler Flags)/: compute-areas.cpp  geometry_polygon.cpp  geometry_rhombus.cpp  geometry_square.cpp  geometry_square.h
Project 8 (Cross Platform Dependencies)/: main.cpp
Project 9 (Compiler Dependent Code)/: main.cpp
